# devcaption

./: .gitignore  BLACKHOLE_TEST.md  README.md  SYSTEM_AUDIO_SETUP.md  TESTING.md  package-lock.json  package.json  prompt.md  vite.config.ts
src/: App.css  App.tsx
src-tauri/: Cargo.toml  config.json  prompt.md  tauri.conf.json
src-tauri/resources/: prompt.md
src-tauri/src/: audio_capture.rs  gemini_service.rs  lib.rs  main.rs  speech_recognition.rs  system_audio.rs
